--- a/historia.html
+++ b/historia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Woodstock - historia festiwalu</title>
-    <link rel="stylesheet" href="styl1.css">
+    <link rel="stylesheet" href="woodstock.css">
 </head>
 
     
