--- a/gwiazdy.html
+++ b/gwiazdy.html
@@ -14,7 +14,7 @@
             <h2>Menu</h2>
             <div id="linki">
             <ul>
-                <li><a href="wood2.html">Strona główna</a></li>
+                <li><a href="woodstock.html">Strona główna</a></li>
                 <li><a href="historia.html">Historia festiwalu</a></li>
                 <li><a href="gwiazdy.html">Najsłynniejsi artyści</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
