--- a/woodstock.html
+++ b/woodstock.html
@@ -17,7 +17,7 @@
             <h2>Menu</h2>
         <div id="linki">
             <ul>
-                <li><a href="wood2.html">Strona główna</a></li>
+                <li><a href="woodstock.html">Strona główna</a></li>
                 <li><a href="historia.html">Historia festiwalu</a></li>
                 <li><a href="gwiazdy.html">Najsłynniejsi artyści</a></li>
                 
