--- a/historia.html
+++ b/historia.html
@@ -15,7 +15,7 @@
             <div id="linki">
             <h2>Menu</h2>
             <ul>
-                <li><a href="wood2.html">Strona główna</a></li>
+                <li><a href="woodstock.html">Strona główna</a></li>
                 <li><a href="historia.html">Historia festiwalu</a></li>
                 <li><a href="gwiazdy.html">Najsłynniejsi artyści</a></li>
                 
