--- a/woodstock.html
+++ b/woodstock.html
@@ -25,7 +25,7 @@
         </div>
         </div>
         <div id="right1">
-            <h1>Woodstock - festiwal muzyki i pokoju</h1>
+            <h1>Woodstock - festiwal muzyki</h1>
         </div>
         <div id="right2">
             <img src="woodstock1.jpg" alt="Tłum na Woodstocku">
