--- a/woodstock.html
+++ b/woodstock.html
@@ -40,7 +40,7 @@
             <img src="logo.jpg" alt="Logo Woodstocku">
         </div>
         <div id="foot">
-            <p>Autor: Krystian</p>
+            <p>Autor: Krystian i Antoni klasa 2P</p>
         </div>
     </div>
 </body>
