--- a/gwiazdy.html
+++ b/gwiazdy.html
@@ -30,7 +30,8 @@
                 <li><b>Jimi Hendrix</b> - legendarny gitarzysta i wokalista, uważany za jednego z największych muzyków rockowych wszech czasów. Jego występ na Woodstocku był ostatnim na festiwalu i trwał ponad dwie godziny. Najbardziej zapamiętana jest jego wersja amerykańskiego hymnu narodowego, w której naśladował dźwięki bomb i karabinów, nawiązując do wojny w Wietnamie.</li>
                 <li><b>The Who</b> - brytyjski zespół rockowy, znany z energetycznych koncertów i oper rockowych. Na Woodstocku zagrali 25 utworów, w tym całą suitę z albumu <i>Tommy</i>. Ich występ został przerwany przez aktywistę Abbiego Hoffmana, który wtargnął na scenę i zaczął mówić o aresztowaniu Johna Sinclaira, lidera Białych Panter. Gitarzysta Pete Townshend zrzucił Hoffmana ze sceny uderzając go gitarą.</li>
                 <li><b>Janis Joplin</b> - amerykańska piosenkarka i kompozytorka, nazywana \"królową rocka\". Jej charakterystyczny, pełen emocji głos i styl śpiewania zrobiły na Woodstocku duże wrażenie. Joplin wystąpiła z zespołem Kozmic Blues Band i zaśpiewała 10 piosenek, w tym \"Piece of My Heart\", \"Summertime\" i \"Ball and Chain\".</li>
-                <li><b>Santana</b> - amerykański zespół rockowy, założony przez meksykańskiego gitarzystę.
+                <li><b>Santana</b> - amerykański zespół rockowy, założony przez meksykańskiego gitarzystę.</li>
+            </ul>
                     <br>
 
         <img src="jimi.webp">
@@ -38,3 +39,7 @@
         <br>
         <img src="janisjolpin.jpg">
         <img src="santana.webp">
+        </div>
+    </div>
+</body>
+</html>
