--- a/historia.html
+++ b/historia.html
@@ -34,7 +34,7 @@
         </div>
 
         <div id="left2">
-            <img src="logo.webp" alt="Logo Woodstocku">
+            <img src="logo.jpg" alt="Logo Woodstocku">
         </div>
         <div id="foot">
             <p>Autor: Krystian i Antoni klasa 2P</p>
