--- a/woodstock.html
+++ b/woodstock.html
@@ -29,10 +29,10 @@
         </div>
         <div id="right2">
             <img src="woodstock1.jpg" alt="Tłum na Woodstocku">
-            <p>Witaj na mojej stronie poświęconej Woodstockowi, najsłynniejszemu festiwalowi muzycznemu w historii.<br>
+            <p>Witaj na naszej stronie poświęconej Woodstockowi, najsłynniejszemu festiwalowi muzycznemu w historii.<br>
                 Tutaj dowiesz się wszystkiego o tym wyjątkowym wydarzeniu, które zgromadziło ponad 400 tysięcy ludzi w dniach 15-18 sierpnia 1969 roku na farmie Maxa Yasgura w Bethel w stanie Nowy Jork.<br>
                 Zobaczysz zdjęcia, posłuchasz nagrań i przeczytasz ciekawostki o artystach, którzy wystąpili na scenie i zachwycili publiczność swoją muzyką i przesłaniem.</p>
-            <h4>Zapraszam do zwiedzania!</h4>
+            <h4>Zapraszamy do zwiedzania!</h4>
         </div>
  
         <div id="left2">
